--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <title>Pz SmartFarm App</title>
 
-  <base href="/">
+  <base href>
 
   <meta name="color-scheme" content="light dark">
   <meta name="viewport" content="viewport-fit=cover, width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no">
@@ -21,6 +21,6 @@
 
 <body>
   <app-root></app-root>
-<script src="runtime.e9304414841b7538.js" type="module"></script><script src="polyfills.45b15749fa958a1d.js" type="module"></script><script src="main.1f4ad1377ff19fa3.js" type="module"></script></body>
+<script src="runtime.abee9e77b731d9b5.js" type="module"></script><script src="polyfills.45b15749fa958a1d.js" type="module"></script><script src="main.1f4ad1377ff19fa3.js" type="module"></script></body>
 
 </html>
